feat: Enhance Matching, Preferences, and Profile Controllers with Action Handlers
- Added keyboard shortcuts for undo functionality in MatchingController.
- Implemented action handlers for buttons in PreferencesController and MatchingController.
- Updated FXML files to bind new buttons with fx:id for better accessibility.
- Improved user experience by adding mouse click handlers for suggestion cards in MatchingController.
- Refactored ProfileController to wire auxiliary actions for photo upload and dealbreakers editing.
- Enhanced UiServices and UiAnimations for better event handling and animations.
- Updated tests for ProfileCompletionService and StatsMetrics to improve validation and coverage.